--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,16 @@ header h3 {
   padding-bottom: 100px;
   font-size: 14px;
 }
+
+#learning {
+  clear: both;
+  height: 400px;
+}
+
+#learning div {
+  float: right;
+   width: 300px;
+   border: 3px solid #73AD21;
+   padding: 10px;
+   margin-right: 30px;
+}
