--- a/css/style.css
+++ b/css/style.css
@@ -47,14 +47,12 @@ header h3 {
 }
 
 #learning {
-  clear: both;
-  height: 400px;
+  text-align: center;
 }
 
 #learning div {
-  float: right;
-   width: 300px;
-   border: 3px solid #73AD21;
-   padding: 10px;
-   margin-right: 30px;
+  display: inline-block;
+  width: 200px;
+  height: 100px;
+  margin: 6em;
 }
