--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ nav ul li {
   border-right: solid black 1px;
   margin-right: 12px;
   padding-right: 12px;
+  font-size: 18px;
 }
 
 nav ul li:last-child {
@@ -32,18 +33,20 @@ header {
 header h1 {
   margin-top: 40px;
   margin-bottom: 10px;
+  font-size: 72px;
+  font-family: Garamond;
 }
 
 header h2 {
   margin-top: 0px;
   margin-bottom: 10px;
-  font-size: 16px;
+  font-size: 20px;
 }
 
 header h3 {
   margin-top: 0px;
   padding-bottom: 100px;
-  font-size: 14px;
+  font-size: 17px;
 }
 
 #learning {
@@ -54,4 +57,12 @@ header h3 {
   display: inline-block;
   width: 300px;
   height: 100px;
+}
+
+section h2 {
+  margin-bottom: 40px;
+}
+
+section p {
+  margin-top: 10px;
 }
