--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ header {
   background: white url('../img/mountain-header.jpg') no-repeat center center;
   background-size: cover;
   text-align: center;
+  padding-bottom: 200px;
 }
 
 header h1 {
@@ -45,8 +46,23 @@ header h2 {
 
 header h3 {
   margin-top: 0px;
-  padding-bottom: 100px;
   font-size: 17px;
+}
+
+/* Homepage Sections */
+
+section {
+  text-align: center;
+  border-bottom: solid #e1e1e1 1px;
+  padding: 30px 0px 40px 0px;
+}
+
+section h2 {
+  margin-bottom: 40px;
+}
+
+section p {
+  margin-top: 10px;
 }
 
 #learning {
@@ -59,10 +75,18 @@ header h3 {
   height: 100px;
 }
 
-section h2 {
-  margin-bottom: 40px;
+#about {
+  background-color: #f1f1f1;
 }
 
-section p {
-  margin-top: 10px;
+#experiments ul {
+  width: 350px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+}
+
+footer {
+  text-align: center;
+  margin: 30px 0px 30px 0px;
 }
